# galactipy

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .triage-policies.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  Makefile  README.md  ROADMAP.md  SECURITY.md  cookiecutter.json  pyproject.toml  renovate.json  tasks.py
.gitlab/: changelog_config.yml
.gitlab/issue_templates/: Bug Report.md  Feature Request.md  Internal Work Item.md  Question.md  Request for Correction.md  Request for Improvement.md  Request for Support.md  Starter Assignment Treatment.md
.gitlab/merge_request_templates/: Housekeeping.md  Internal Improvements.md  (+6 more)
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_helpers.py  test_operations.py  test_regex.py  test_template.py  test_utils.py
utils/: __init__.py  resolution.py
{{ cookiecutter.repo_name }}/: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .triage-policies.yml  AUTHORS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  Makefile  README.md  ROADMAP.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  renovate.json  setup.cfg  tasks.py
{{ cookiecutter.repo_name }}/_headers/: agpl3.txt  apache.txt  gpl3.txt  lgpl3.txt  mit.txt
{{ cookiecutter.repo_name }}/_licences/: apache.txt  bsd3.txt  mit.txt
{{ cookiecutter.repo_name }}/_templates/.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
{{ cookiecutter.repo_name }}/_templates/.github/DISCUSSION_TEMPLATE/: request_for_improvement.yml  request_for_support.yml  requests-for-improvement.yml  requests-for-support.yml
{{ cookiecutter.repo_name }}/_templates/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  internal_work_item.yaml  question.md  request_for_correction.yml  starter_assingment_treatment.yml
{{ cookiecutter.repo_name }}/_templates/.github/PULL_REQUEST_TEMPLATE/: backend_components.md  feature_proposals.md  housekeeping.md  interface_architecture.md  internal_improvements.md  localisation.md  priority_patching.md  project_policies.md  structural_design.md  user_experience.md
{{ cookiecutter.repo_name }}/_templates/.github/workflows/: build.yml  docker.yml  greetings.yml  pypi-prod.yml  pypi-test.yml  pypi.yml  release-drafter.yml  test.yml  test_template.yml
{{ cookiecutter.repo_name }}/_templates/.gitlab/: changelog_config.yml
{{ cookiecutter.repo_name }}/_templates/.gitlab/components/: docker.yml
{{ cookiecutter.repo_name }}/_templates/.gitlab/issue_templates/: Bug Report.md  Internal Work Item.md  Question.md  Request for Correction.md  Request for Improvement.md  Request for Support.md  Starter Assignment Treatment.md
{{ cookiecutter.repo_name }}/_templates/.gitlab/merge_request_templates/: Backend Components.md  Feature Proposals.md  Housekeeping.md  Interface Architecture.md  Internal Improvements.md  Localisation.md  Priority Patching.md  Project Policies.md  Structural Design.md  User Experience.md  default.md
{{ cookiecutter.repo_name }}/docker/: Dockerfile  README.md
{{ cookiecutter.repo_name }}/docs_feature/source/: conf.py  index.rst
{{ cookiecutter.repo_name }}/docs_feature/source/development/: community.rst  contributing.rst  contributing_codebase.rst  contributing_environment.rst  maintaining.rst  policies.rst
{{ cookiecutter.repo_name }}/docs_feature/source/development/contributing_documentation/: docstring_guide.rst  index.rst
{{ cookiecutter.repo_name }}/docs_feature/source/getting_started/: install.rst  overview.rst  tutorials.rst
{{ cookiecutter.repo_name }}/docs_feature/source/getting_started/comparison/: comparison_with_cowsay.rst  comparison_with_hello_world.rst  comparison_with_lolcat.rst  index.rst
{{ cookiecutter.repo_name }}/docs_feature/source/getting_started/intro_tutorials/: 01_saying_hello.rst  02_colourful_greetings.rst  index.rst
{{ cookiecutter.repo_name }}/docs_feature/source/reference/: cli.rst  hello.rst
{{ cookiecutter.repo_name }}/docs_feature/source/user_guide/: 10min.rst  advanced.rst  basics.rst  gotchas.rst  options.rst
{{ cookiecutter.repo_name }}/docs_feature/source/whatsnew/: v0.1.0.rst
{{ cookiecutter.repo_name }}/tests/: conftest.py  test_hello.py
{{ cookiecutter.repo_name }}/tests/cli/: test_config_command.py  test_launch_command.py  test_root_command.py
{{ cookiecutter.repo_name }}/tests/config/: test_manager.py
{{ cookiecutter.repo_name }}/tests/features/: app_manager.feature  config_command.feature  launch_command.feature  log_parser.feature  main_window.feature  manager_resolution.feature  root_command.feature
{{ cookiecutter.repo_name }}/tests/helpers/: __init__.py  tui_helpers.py
{{ cookiecutter.repo_name }}/tests/logging/: test_regex_parser.py
{{ cookiecutter.repo_name }}/tests/test_example/: test_hello.py
{{ cookiecutter.repo_name }}/tests/tui/: test_main_window.py
{{ cookiecutter.repo_name }}/tests/utils/: __init__.py  parsers.py  pytest_bdd_async.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/: __init__.py  __main__.py  _version.py  example.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/cli/: root_command.py  styles.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/cli/commands/: launch.py  root_command.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/cli/commands/config/: __init__.py  extend.py  get.py  set.py  unset.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/cli/helpers/: __init__.py  converter.py  printer.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/cli/styling/: __init__.py  themes.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/config/: __init__.py  constants.py  helpers.py  manager.py  mappings.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/logging/: __init__.py  formatters.py  parsers.py  text_tools.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/tui/: main_window.py  themes.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/tui/css/: demo.tcss  noctis.tcss
