# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "galactipy"
version = "0.1.0"
description = "Cookiecutter template for Python packages"
readme = "README.md"
authors = ["Manoel Pereira de Queiroz <mpq.dev@pm.me>"]
license = "MIT"
repository = "https://gitlab.com/manoelpqueiroz/galactipy"
homepage = "https://gitlab.com/manoelpqueiroz/galactipy"
keywords = [
  "python",
  "cookiecutter",
  "template",
  "packages",
  "makefile",
  "best-practices",
  "poetry",
  "codestyle",
  "formatters",
  "python-packages",
  "semantic-versions"
]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = ["Private :: Do Not Upload"]


[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^2.3.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
mypy-extensions = "^0.4.3"
pre-commit = "^2.21.0"
bandit = "^1.7.5"
safety = "^2.3.4"

black = "^22.8.0"
isort = {extras = ["colors"], version = "^5.11.0"}
pyupgrade = "^3.0.0"

flake8 = "^5.0.4"
pydocstyle = {extras = ["toml"], version = "^6.2.0"}
pydoclint = "^0.3.0"

pytest = "^7.2.1"
pytest-html = "^4.0.2"
pytest-cov = "^4.1.0"
coverage = "^7.3.0"


[tool.black]
# https://github.com/psf/black
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
target-version = ["py38"]
line-length = 88
color = true

exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | env
  | venv
)/
'''


[tool.isort]
# https://github.com/PyCQA/isort
# https://pycqa.github.io/isort/docs/configuration/options.html
py_version = 38
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
indent = 4
color_output = true
profile = "black"


[tool.mypy]
# https://github.com/python/mypy
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.8
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pydocstyle]
# https://github.com/PyCQA/pydocstyle
# http://www.pydocstyle.org/en/stable/usage.html#available-options
convention = "numpy"


[tool.pydoclint]
# https://github.com/jsh9/pydoclint
# https://jsh9.github.io/pydoclint/how_to_config.html
style = "numpy"
exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycache__
  | _build
  | buck-out
  | build
  | dist
  | env
  | venv
)/
'''


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =[
  "{{ cookiecutter.repo_name }}",
  "hooks",
  "*.egg",
  ".eggs",
  "dist",
  "build",
  "docs",
  ".tox",
  ".git",
  "__pycache__"
]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]


[tool.coverage.run]
source = ["tests"]
branch = true


[tool.coverage.report]
exclude_also = [
  "def main",
  "if __name__ == .__main__.:"
]
fail_under = 90
show_missing = true


[tool.coverage.paths]
source = ["hooks"]
